# ruuvi.endpoints.c

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  Doxyfile  Makefile  README.md  _r_e_a_d_m_e_8md_source.html  annotated.html  annotated_dup.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  index.html  menudata.js  navtreedata.js  navtreeindex0.js  navtreeindex1.js  project.yml  project_ext_adv_48.yml  project_ext_adv_max.yml  ruuvi__endpoint__3_8c_source.html  ruuvi__endpoint__3_8h_source.html  ruuvi__endpoint__5_8c_source.html  ruuvi__endpoint__5_8h_source.html  ruuvi__endpoint__6_8c_source.html  ruuvi__endpoint__6_8h_source.html  ruuvi__endpoint__7_8c_source.html  ruuvi__endpoint__7_8h_source.html  ruuvi__endpoint__8_8c_source.html  ruuvi__endpoint__8_8h.html  (+108 more)
.github/workflows/: astyle.yml  ceedling.yml  format.yml  gh-pages-check.yml  gh-pages-push.yml  sonar-scan.yml
fullhtml/: index.html
fullhtml/sources/: ruuvi_endpoint_3.c_0.html  ruuvi_endpoint_3.c_1.html  ruuvi_endpoint_5.c_2.html  ruuvi_endpoint_5.c_3.html  ruuvi_endpoint_5.h_1.html  ruuvi_endpoint_5.h_2.html  ruuvi_endpoint_ibeacon.c_3.html  ruuvi_endpoint_ibeacon.c_4.html  ruuvi_endpoints.h_0.html
scripts/: clang_format_all.sh  run-clang-format.sh
search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  files_0.js  functions_0.js  pages_0.js  pages_1.js  pages_2.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js  variables_9.js  variables_a.js  variables_b.js  variables_c.js  variables_d.js  (+2 more)
src/: ruuvi_endpoint_3.c  ruuvi_endpoint_3.h  ruuvi_endpoint_5.c  ruuvi_endpoint_5.h  ruuvi_endpoint_6.c  ruuvi_endpoint_6.h  ruuvi_endpoint_7.c  ruuvi_endpoint_7.h  ruuvi_endpoint_8.c  ruuvi_endpoint_8.h  ruuvi_endpoint_c5.c  ruuvi_endpoint_c5.h  ruuvi_endpoint_ca_uart.c  ruuvi_endpoint_ca_uart.h  ruuvi_endpoint_e0.c  ruuvi_endpoint_e0.h  ruuvi_endpoint_e1.c  ruuvi_endpoint_e1.h  ruuvi_endpoint_f0.c  ruuvi_endpoint_f0.h  ruuvi_endpoint_fa.c  ruuvi_endpoint_fa.h  ruuvi_endpoint_ibeacon.c  ruuvi_endpoint_ibeacon.h  ruuvi_endpoints.c  ruuvi_endpoints.h  ruuvi_endpoints_internal.h
test/: test_ruuvi_endpoint_3.c  test_ruuvi_endpoint_5.c  test_ruuvi_endpoint_6.c  test_ruuvi_endpoint_7.c  test_ruuvi_endpoint_8.c  test_ruuvi_endpoint_c5.c  test_ruuvi_endpoint_ca_uart.c  test_ruuvi_endpoint_e0.c  test_ruuvi_endpoint_e1.c  test_ruuvi_endpoint_f0.c  test_ruuvi_endpoint_fa.c  test_ruuvi_endpoint_ibeacon.c  test_ruuvi_endpoints.c
